# cmake-cuda-example

./: CMakeLists.txt  LICENSE  README.md  run.sh
src/: gpu.cu  gpu.hpp  main.cc
